[project]
name = "piplog"
version = "0.0.1"
authors = [
  { name="Alicia Sun", email="asun0102@gmail.com" },
  { name="Kenneth Xiao", email="kdxiao@uwaterloo.ca" }
]
description = "Logs your pip install history"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Alicia-Sun/piplog"
Issues = "https://github.com/Alicia-Sun/piplog/issues"

[project.scripts]
piplog = "piplog.piplog:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["piplog"]
package_dir = {"" = "src"}